--- a/clicky-game/src/components/Title/Title.css
+++ b/clicky-game/src/components/Title/Title.css
@@ -2,7 +2,9 @@
   width: 100%;
   text-align: center;
   font-size: 3rem;
-  text-decoration: underline;
   color: #2A77AE;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
+  background-color: #82edbe;
+  padding-top:60px;
+  padding-bottom: 20px;
 }
