--- a/clicky-game/src/components/CharacterCard/CharacterCard.css
+++ b/clicky-game/src/components/CharacterCard/CharacterCard.css
@@ -2,7 +2,7 @@
   background: #fff;
   border-radius: 2px;
   height: 250px;
-  /*margin: 1rem;*/
+  margin: 1rem;
   position: relative;
   width: 225px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
@@ -16,34 +16,9 @@
   text-align: center;
   background: white;
 }
+
 .card > .img-container > img {
   height: 100%;
   width: 100%
 }
 
-/*.card > .content {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-size: 15px;
-}
-
-.card > .content > ul {
-  list-style-type: none;
-}
-
-.card > .content > ul > li {
-  margin-top: 18px;
-}*/
-
-/*.card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.card > .remove:hover {
-  color: #d50000;
-}*/
